# onomastikon

./: pyproject.toml
data/: countries.csv  first_names.csv  last_names.csv
onomastikon/: __init__.py  config.py  models.py  ono.py
