[tool.poetry]
name = "onomastikon"
version = "0.1.2"
description = ""
authors = ["Marcin Baryłka <marcin.barylka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
appdirs = "^1.4.4"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
